fix: fixed several bugs

--- a/index.html
+++ b/index.html
@@ -265,11 +265,9 @@
               англійська мова також буде вам у пригоді і допоможе спілкуватись з людьми у різних країнах світу.
             </div>
           </div>
-          <button class="btn">
-            <a href="#callback-section">
-              Записатись
-            </a>
-          </button>
+          <a class="btn" href="#callback-section">
+            Записатись
+          </a>
         </div>
       </section>
     </div>
@@ -670,11 +668,9 @@
                   У front-end розробників висока оплата праці. За даними українського сервісу пошуку роботи http://Work.ua, середня заробітна плата front-end розробника складає $1000, висококваліфіковані та досвідчені спеціалісти заробляють ще більше.
                 </li>
               </ul>
-              <button class="btn">
-                <a href="#callback-section">
-                  Записатись
-                </a>
-              </button>
+              <a class="btn" href="#callback-section">
+                Записатись
+              </a>
             </div>
           </div>
           <div class="accordion__item about-teaching-accordion-item">
@@ -699,11 +695,9 @@
                   Різноманітні вектори подальшого розвитку. Можна за бажанням зануритись у будь-яку специфічну сферу тестування (ігри, платформи, веб-додатки тощо) або навіть із часом перейти до команди розробників.
                 </li>
               </ul>
-              <button class="btn">
-                <a href="#callback-section">
-                  Записатись
-                </a>
-              </button>
+              <a class="btn" href="#callback-section">
+                Записатись
+              </a>
             </div>
           </div>
           <div class="accordion__item about-teaching-accordion-item">
@@ -728,11 +722,9 @@
                   Гнучкість та універсальність. Програми на Python працюють без додаткових коригувань на різних платформах та операційних системах: Windows, macOS, Linux та Unix. Розробники можуть легко поєднувати Python з іншими популярними мовами програмування, такими як Java, C та C++.
                 </li>
               </ul>
-              <button class="btn">
-                <a href="#callback-section">
-                  Записатись
-                </a>
-              </button>
+              <a class="btn" href="#callback-section">
+                Записатись
+              </a>
             </div>
           </div>
           <div class="accordion__item about-teaching-accordion-item">
@@ -757,11 +749,9 @@
                   Засвоєння інформації про мережу Інтернет дозволить Вам не тільки працювати з браузером, інтернет-месенджерами та іншими мережевими програмами, а й навчить елементаним правилам безпеки та допоможе уникнути зайвих неприємностей.
                 </li>
               </ul>
-              <button class="btn">
-                <a href="#callback-section">
-                  Записатись
-                </a>
-              </button>
+              <a class="btn" href="#callback-section">
+                Записатись
+              </a>
             </div>
           </div>
           <div class="accordion__item about-teaching-accordion-item">
@@ -786,11 +776,9 @@
                   Більше можливостей для подорожей.Якщо ви любите подорожувати, знання англійської мови вам знадобиться.Англійська є однією з найпоширеніших мов у світі, тому вона необхідна для спілкування з людьми в різних країнах.
                 </li>
               </ul>
-              <button class="btn">
-                <a href="#callback-section">
-                  Записатись
-                </a>
-              </button>
+              <a class="btn" href="#callback-section">
+                Записатись
+              </a>
             </div>
           </div>
         </div>
