fix: changed spelling

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
         </div>
       </section>
       <section class="salary">
-        <h2 class="section-title">Кар’eрне зростання</h2>
+        <h2 class="section-title">Кар’єрне зростання</h2>
         <div class="section-content">
           <p class="section-text">
             Кар'єрний ріст та збільшення заробітної плати - це два головних фактори, що приваблюють нових фахівців до сфери ІТ. І не
