fix: fix main page

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
         <div class="teaching-card">
           <h1 class="teaching-card__title">Front-end</h1>
-          <hr color="#FD460E">
+          <hr>
           <p class="teaching-card__text">
             Створення веб-сайтів та додатків - цікавий та творчий процес, який поєднує вміння написати ефективний код та створити зручний, 
             інтуїтивно зрозумілий та привабливий інтерфейс. Front-end розробник - 
@@ -164,7 +164,7 @@
         </div>
         <div class="teaching-card">
           <h1 class="teaching-card__title">Основи роботи з комп'ютером</h1>
-          <hr color="#FD460E">
+          <hr>
           <p class="teaching-card__text">
             Сучасний світ неможливо уявити без комп’ютерних технологій, які міцно укоренилися майже у всіх сферах нашого життя: 
             побуті, освіті, бізнесі, науці, соціальних та державних інституціях. 
@@ -173,7 +173,7 @@
         </div>
         <div class="teaching-card">
           <h1 class="teaching-card__title">QA (контроль якості програмного забезпечення)</h1>
-          <hr color="#FD460E">
+          <hr>
           <p class="teaching-card__text">
             Робота QA-спеціалістів полягає у забезпеченні якості програмного продукту та зосереджена головним чином на його тестуванні. 
             Почати працювати тестувальником дуже легко - достатньо мати базові знання і навички у пошуку та документуванні 
@@ -182,7 +182,7 @@
         </div>
         <div class="teaching-card">
           <h1 class="teaching-card__title">Python (універсальна мова програмування)</h1>
-          <hr color="#FD460E">
+          <hr>
           <p class="teaching-card__text">
             Одна з найпопулярніших мов програмування. Використовується багатьма великими компаніями, такими як Google та Facebook. 
             Завдяки простому, логічному та зрозумілому синтаксису, а також широкому спектру застосування має велику спільноту 
@@ -191,7 +191,7 @@
         </div>
         <div class="teaching-card">
           <h1 class="teaching-card__title">English</h1>
-          <hr color="#FD460E">
+          <hr>
           <p class="teaching-card__text">
             Англійська мова є міжнародною мовою спілкування, тому її знання відкриває вам більше можливостей для 
             навчання та працевлаштування як в Україні, так і за кордоном. Якщо ж ви просто полюбляєте подорожувати, 
@@ -277,7 +277,7 @@
         <div class="container">
           <div class="advantages__item">
             <span class="item__num">01</span>
-            <p>Наші репетитори мають практичний досвід в IT </br> від 1 до 10 років</p>
+            <p>Наші репетитори мають практичний досвід в IT <br> від 1 до 10 років</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">02</span>
@@ -297,7 +297,7 @@
           </div>
           <div class="advantages__item">
             <span class="item__num">06</span>
-            <p>Допомагаємо скласти резюме та підготуватись </br> до співбесіди</p>
+            <p>Допомагаємо скласти резюме та підготуватись <br> до співбесіди</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">07</span>
@@ -305,7 +305,7 @@
           </div>
           <div class="advantages__item">
             <span class="item__num">08</span>
-            <p>Сертифікат/рекомендації в залежності </br> від отриманих компетенцій</p>
+            <p>Сертифікат/рекомендації в залежності <br> від отриманих компетенцій</p>
           </div>
         </div>
       </section>
