fix: fix margins and card floating out

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="col">
             <ul class="consult__list">
-              <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQl)?</li>
+              <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQL)?</li>
               <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
               <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
               <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
