feat: added link to privacy policy page to footers

--- a/about-us.html
+++ b/about-us.html
@@ -105,6 +105,7 @@
             </div>
             <div class="footer__copyright">
               <p>&#169; Компанія N-CODE 2023</p>
+              <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
             </div>
         </div>
         </div>
@@ -224,6 +225,7 @@
           </div>
           <div class="footer__copyright">
             <p>&#169; Компанія N-CODE 2023</p>
+            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
           </div>
           <div class="col logo-mobile">
             <a href="index.html">
