--- a/feedback.html
+++ b/feedback.html
@@ -103,6 +103,7 @@
                 </div>
                 <div class="footer__copyright">
                   <p>&#169; Компанія N-CODE 2023</p>
+                  <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                 </div>
             </div>
             </div>
@@ -403,6 +404,7 @@
           </div>
           <div class="footer__copyright">
             <p>&#169; Компанія N-CODE 2023</p>
+            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
           </div>
           <div class="col logo-mobile">
             <a href="index.html">
@@ -506,6 +508,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -607,6 +610,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -708,6 +712,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -811,6 +816,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -913,6 +919,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1016,6 +1023,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1119,6 +1127,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1222,6 +1231,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
