--- a/tutors.html
+++ b/tutors.html
@@ -99,6 +99,7 @@
             </div>
             <div class="footer__copyright">
               <p>&#169; Компанія N-CODE 2023</p>
+              <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
             </div>
           </div>
         </div>
@@ -358,6 +359,7 @@
         </div>
         <div class="footer__copyright">
           <p>&#169; Компанія N-CODE 2023</p>
+          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
         </div>
         <div class="col logo-mobile">
           <a href="index.html">
@@ -469,6 +471,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -574,6 +577,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -680,6 +684,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -784,6 +789,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -887,6 +893,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -991,6 +998,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -1094,6 +1102,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
@@ -1199,6 +1208,7 @@
                         </div>
                         <div class="footer__copyright">
                             <p>&#169; Компанія N-CODE 2023</p>
+                            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                         </div>
                         <div class="col logo-mobile">
                             <a href="index.html">
