--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           </div>
           <div class="footer__copyright">
             <p>&#169; Компанія N-CODE 2023</p>
+            <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
           </div>
         </div>
       </div>
@@ -1414,6 +1415,7 @@
         </div>
         <div class="footer__copyright">
           <p>&#169; Компанія N-CODE 2023</p>
+          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
         </div>
         <div class="col logo-mobile">
           <a href="index.html">
@@ -1525,6 +1527,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1630,6 +1633,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1736,6 +1740,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1840,6 +1845,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -1943,6 +1949,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -2047,6 +2054,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -2150,6 +2158,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -2255,6 +2264,7 @@
                     </div>
                     <div class="footer__copyright">
                         <p>&#169; Компанія N-CODE 2023</p>
+                        <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
                         <a href="index.html">
@@ -2362,6 +2372,7 @@
                   </div>
                   <div class="footer__copyright">
                       <p>&#169; Компанія N-CODE 2023</p>
+                      <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                   </div>
                   <div class="col logo-mobile">
                       <a href="index.html">
@@ -2463,6 +2474,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
@@ -2564,6 +2576,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
@@ -2667,6 +2680,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
@@ -2769,6 +2783,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
@@ -2872,6 +2887,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
@@ -2975,6 +2991,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
@@ -3078,6 +3095,7 @@
                       </div>
                       <div class="footer__copyright">
                           <p>&#169; Компанія N-CODE 2023</p>
+                          <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                       </div>
                       <div class="col logo-mobile">
                           <a href="index.html">
