fix: fix feedback card in mobile

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </header>
     <div class="slider">
       <div class="slide">
-        <h1 class="title"><span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм репетитором</h1>
+        <h1 class="title"><span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм ментором</h1>
         <p class="subtitle">Вивчай програмування та IT професії онлайн</p>
         <a class="btn slide__btn" href="#callback-section">Замовити консультацію</a>
       </div>
@@ -1055,6 +1055,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                  <a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1084,6 +1085,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1111,6 +1113,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1140,6 +1143,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1167,6 +1171,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1196,6 +1201,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="6">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1225,6 +1231,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="7">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
@@ -1254,6 +1261,7 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
+                    <a class="tutors-card__course-link more-info-link" data-trigger="8">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Репетитор:</p>
