--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
           </label>
           <div class="input-wrapper">
             <label class="required" for="phone">
-              <input class="phone" type="phone" name="phone" placeholder="Номер телефону" required="required" title="будь ласка, заповніть це поле" />
+              <input class="phone" type="phone" id="phone" name="phone" placeholder="Номер телефону" required="required" title="будь ласка, заповніть це поле" />
             </label>
             <label class="required">
               <input class="email" type="email" name="email" placeholder="E-mail" required="required" title="будь ласка, заповніть це поле" />
@@ -3125,13 +3125,13 @@
         <a class="back-link">Назад </a>
         <form class="form" action="POST" id="mentorForm">
           <label class="required" for="name">
-            <input class="name" type="text" name="name" placeholder="Ім’я та Прізвище" required="required" />
+            <input class="name" type="text" id="name" name="name" placeholder="Ім’я та Прізвище" required="required" />
           </label>
           <label class="required" for="phone">
             <input class="phone" type="phone" name="phone" placeholder="Номер телефону" required="required" />
           </label>
           <label class="required" for="email">
-            <input class="email" type="email" name="email" placeholder="E-mail" required="required" />
+            <input class="email" type="email" id="email" name="email" placeholder="E-mail" required="required" />
           </label>
           <div class="input-wrapper">
             <label class="required file-upload" for="file">
@@ -3139,7 +3139,7 @@
               <input id="file" class="file" type="file" name="attachment" accept=".pdf,.docx" required="required" />
             </label>
             <label for="linkedIn">
-              <input class="link" type="text" name="linkedIn" placeholder="LinkedIn" />
+              <input class="link" id="linkedIn" type="text" name="linkedIn" placeholder="LinkedIn" />
             </label>
           </div>
           <textarea class="comment" name="comment" placeholder="Коментар (не обов’язково)"></textarea>
