--- a/feedback.html
+++ b/feedback.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/nice-select2.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/popap-templ.css">
     <link rel="stylesheet" href="css/became-mentor-popup.css" />
     <link rel="stylesheet" href="css/feedback-page.css">
@@ -26,7 +27,7 @@
 </head>
 
 <body>
-    <div class="content-container feedback-page feedback cards-page">
+    <div class="content-container feedback-page feedback cards-page page-wrapper">
         <header class="header" id="header">
             <div class="container">
               <div class="logo">
@@ -42,7 +43,7 @@
                   <li class="menu__item"><a href="index.html">Головна</a></li>
                   <li class="menu__item"><a href="about-us.html">Про нас</a></li>
                   <li class="menu__item"><a href="tutors.html">Репетитори</a></li>
-                  <li class="menu__item"><a href="feedback.html">Відгуки</a></li>
+                  <li class="menu__item"><a href="#footer-copyright">Контакти</a></li>
                 </ul>
                 <div class="header__items">
                   <a class="btn login-btn">Вхiд</a>
@@ -60,7 +61,7 @@
                 <li class="menu__item"><a href="index.html">Головна</a></li>
                 <li class="menu__item"><a href="about-us.html">Про нас</a></li>
                 <li class="menu__item"><a href="tutors.html">Репетитори</a></li>
-                <li class="menu__item"><a href="feedback.html">Відгуки</a></li>
+                <li class="menu__item"><a href="#footer-copyright">Контакти</a></li>
               </ul>
               <div class="header__items">
                 <a class="btn login-btn">Вхiд</a>
@@ -102,7 +103,7 @@
                   </a>
                 </div>
                 <div class="footer__copyright">
-                  <p>&#169; Компанія N-CODE 2023</p>
+                  <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span> </p>
                   <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                 </div>
             </div>
@@ -359,7 +360,7 @@
             <div class="col">
               <p class="footer__title">Контакти</p>
               <ul class="footer__list">
-                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
               </ul>
             </div>
@@ -402,8 +403,8 @@
               </svg>              
             </a>
           </div>
-          <div class="footer__copyright">
-            <p>&#169; Компанія N-CODE 2023</p>
+          <div class="footer__copyright" id="footer__copyright">
+            <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
             <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
           </div>
           <div class="col logo-mobile">
@@ -463,7 +464,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -507,7 +508,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -565,7 +566,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -609,7 +610,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -667,7 +668,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -711,7 +712,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -771,7 +772,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -815,7 +816,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -874,7 +875,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -918,7 +919,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -978,7 +979,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -1022,7 +1023,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -1082,7 +1083,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -1126,7 +1127,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -1186,7 +1187,7 @@
                         <div class="col">
                             <p class="footer__title">Контакти</p>
                             <ul class="footer__list">
-                                <li><a href="mailto:admin@n-code.study">admin@n-code.study</a></li>
+                                <li><a href="mailto:info@n-code.study">info@n-code.study</a></li>
                                 <li><a href="tel:380686272727">+38 (068) 627-27-27</a></li>
                             </ul>
                         </div>
@@ -1230,7 +1231,7 @@
                         </a>
                     </div>
                     <div class="footer__copyright">
-                        <p>&#169; Компанія N-CODE 2023</p>
+                        <p>&#169; Компанія N-CODE 2023 - <span class="currentYear"></span></p>
                         <a class="privacy-policy-link" href="privacy-policy.html">Політика конфідейнційності</a>
                     </div>
                     <div class="col logo-mobile">
@@ -1277,23 +1278,6 @@
         </form>
       </div>
     </div>
-    <!-- Meta Pixel Code -->
-    <script>
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '626317969486542');
-      fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=626317969486542&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
     <script src="js/nice-select2.js"></script>
     <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
     <script src="js/popup.js"></script>
